--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -40,9 +40,9 @@ body  {
     }
 }
 
-.menu__main {
+/* .menu__main {
     width: calc(100% - u.rem(50));
     max-width: u.rem(1055);
     margin-left: auto;
     margin-right: auto;
-}
+} */
