--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -48,7 +48,7 @@
         bottom: u.rem(33);
         right: u.rem(25);
         }
-    &__icon {
+/*     &__icon {
         position: absolute;
         bottom: u.rem(33);
         right: u.rem(25);
@@ -58,5 +58,5 @@
         &:hover {
             background: url("../images/icon/heart-like.svg");
         }
-    }
+    } */
 } 
