--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   min-width: 23.4375rem;
-  position: relative;
 }
 
 .container {
@@ -185,12 +184,6 @@ body {
   }
 }
 
-/* .menu__main {
-    width: calc(100% - u.rem(50));
-    max-width: u.rem(1055);
-    margin-left: auto;
-    margin-right: auto;
-} */
 /*----- Header -----*/
 .header {
   display: flex;
@@ -495,7 +488,7 @@ body {
 }
 
 /*----- Boutons -----*/
-.reservez__btn {
+.reservez__btn, .btn__commander {
   display: inline-block;
   background: linear-gradient(193.33deg, var(--btn-purple-dark) -11.44%, var(--btn-purple-light) 123.93%);
   color: var(--white);
@@ -506,7 +499,7 @@ body {
   border-radius: 1.5625rem;
   transition: 300ms ease-out;
 }
-.reservez__btn:hover {
+.reservez__btn:hover, .btn__commander:hover {
   /* transform: matrix(1, 0, 0, -1, 0, 0); */
   transform: scale(1.1);
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, var(--btn-purple-dark) -5.2%, var(--btn-purple-light) 110.74%);
@@ -558,6 +551,53 @@ body {
 }
 .fonctionnement__btn .fa-store {
   color: var(--btn-purple-dark);
+}
+
+.menuBtn {
+  background-color: var(--white);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 21.8125rem;
+  height: 4.3125rem;
+  isolation: isolate;
+  box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.15);
+  border-radius: 1.25rem;
+  transition: all 500ms ease-in-out;
+}
+.menuBtn:hover {
+  transform: translateY(-0.2rem);
+  box-shadow: 0.125rem 0.1875rem 0.9375rem var(--btn-purple-dark);
+}
+.menuBtn__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.3125rem;
+}
+.menuBtn__box--title {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.318125rem;
+  margin-left: 0.9375rem;
+}
+.menuBtn__box--text {
+  line-height: 1.171875rem;
+  margin-left: 0.9375rem;
+  margin-right: 2.375rem;
+  font-weight: 300;
+}
+.menuBtn__box--text span {
+  width: 18px;
+  height: 18px;
+  font-weight: 700;
+  font-size: 15.0431px;
+  line-height: 18px;
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
+  color: #353535;
 }
 
 /*----- Cards -----*/
@@ -639,23 +679,99 @@ svg .heart {
 }
 
 /*----- Les Pages Menu -----*/
-.menu {
+html {
+  background-color: white;
+}
+
+.menuWrapper {
   display: flex;
   flex-direction: column;
-  background-image: url(../images/restaurants/palette.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 23.4375rem;
-  max-width: 90rem;
+  align-items: center;
+  padding: 0px;
+  gap: 40px;
+  position: absolute;
+  width: 375px;
+  height: 1275px;
+  left: calc(50% - 187.5px);
+  top: 315px;
+  z-index: 10;
+}
+@media (min-width: 48em) {
+  .menuWrapper {
+    width: 1440px;
+    height: 1215px;
+    left: 0px;
+    top: 30.625rem;
+  }
+}
+.menuWrapper__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+}
+.menuWrapper__title--titre {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.75rem;
+  line-height: 2.55125rem;
+  width: 341px;
+  height: 1.6875rem;
+}
+.menuWrapper__title--icon {
+  cursor: pointer;
+  overflow: visible;
+  width: 22px;
+  position: absolute;
+  top: 0.5rem;
+  left: 19.5rem;
+  z-index: 10;
+}
+.menuWrapper__box {
+  width: 21.8125rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.75rem;
 }
 
-.menu__main {
-  margin: auto;
+.background {
   background-color: var(--background-color);
-  width: 90%;
   border-radius: 25px 25px 0 0;
+  position: absolute;
+  width: 375px;
+  height: 1307px;
+  left: calc(50% - 187.5px);
+  top: 283px;
+  z-index: 8;
+}
+@media (min-width: 48em) {
+  .background {
+    top: 27.4375rem;
+    width: 65.9375rem;
+    height: 76.3125rem;
+    left: 193px;
+  }
 }
 
-.text_over h2 {
-  height: 10px;
+.image {
+  background-color: var(--white);
+  background: center/110% url("../images/restaurants/palette.jpg");
+  position: absolute;
+  width: 100%;
+  height: 275px;
+  top: 63px;
+  z-index: 0;
+}
+@media (min-width: 48em) {
+  .image {
+    background: center/100% url("../images/restaurants/palette.jpg");
+    height: 956px;
+    width: 1440px;
+    top: -234px;
+    left: 0;
+  }
+}
+
+.footer {
+  width: 100%;
 }
