--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,25 +1,34 @@
 @use '../util/' as u;
 
 /*----- Header -----*/
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.l-header {
+    width: 100%;
     position: fixed;
     top: 0;
-    z-index: 11;
+    left: 0;
+    z-index: 100;
     background-color: var(--white);
-    width: 100%;
     height: u.rem(63);
     @include u.shadow(u.rem(2), u.rem(4), 0.15, u.rem(0));
     @include u.breakpoint(medium) {
         height: u.em(96);
         box-shadow: none;
     }
+}
+
+.nav {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 14px;
+    @include u.breakpoint(medium) {
+        padding-top: u.rem(30);
+    }
     &__link {
-        position: absolute;
-        left: u.rem(23);
+            position: absolute;
+            left: u.rem(6);
     }
     &__logo {
         width: u.rem(162);
@@ -29,16 +38,18 @@
         };
     }
     &__location { 
-        background-color: var(--background-grey-light);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: u.rem(50);
-        margin-top: u.rem(63);
-        @include u.breakpoint(medium) {
-            line-height: u.rem(18.75);
-            margin-top: u.rem(96);
-        };
-    }
+         background-color: var(--background-grey-light);
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         width: 100%;
+         height: u.rem(50);
+         margin-top: u.rem(63);
+         @include u.breakpoint(medium) {
+             line-height: u.rem(18.75);
+             margin-top: u.rem(96);
+         };
+     }
 }
+    
+    
