--- a/scss/pages/_menu-pages.scss
+++ b/scss/pages/_menu-pages.scss
@@ -10,24 +10,24 @@ html {
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    gap: 40px;
+    justify-content: space-between;
     position: absolute;
-    width: 375px;
+    width: 100%;
     height: 1275px;
-    left: calc(50% - 375px/2);
     top: 315px;
     z-index: 10;
     @include u.breakpoint(medium) {
-        width: 1440px;
         height: 1215px;
-        left: 0px;
         top: u.rem(490)
     }
+   /*  @include u.breakpoint(large) {
+        height: 1215px;
+        top: u.rem(490)
+    } */
     &__title {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        position: relative;
         &--titre {
             font-family: u.$font-shirkhand;
             font-size: u.rem(28);
@@ -59,34 +59,36 @@ html {
     border-radius: 25px 25px 0 0;
     position: absolute;
     width: 375px;
-    height: 1307px;
+    height: 1300px;
     left: calc(50% - 375px/2);
-    
     top: 283px;
     z-index: 8;
     @include u.breakpoint(medium) {
         top: u.rem(439);
-        width: u.rem(1055);
-        height: u.rem(1221);
-        left: 193px;
+        left: calc(50% - 668px/2);
+        width: u.rem(668);
+        height: u.rem(1250);
+    }
+    @include u.breakpoint(large) {
+        left: calc(50% - 1024px/2);
+        width: u.rem(1024);
+        height: u.rem(1250);
     }
 }
 
 .image {
     background-color: var(--white);
-    background: center / 110% url('../images/restaurants/palette.jpg');
+    background: center / 100% url('../images/restaurants/palette.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
     width: 100%;
     height: 275px;
     top: 63px;
     z-index: 0;
     @include u.breakpoint(medium) {
-        background: center / 100% url('../images/restaurants/palette.jpg');
-        height: 956px;
-        width: 1440px;
-        top: -234px;
-        left: 0;
-    } 
+        height: 400px;
+    }
 }
 
 .footer {
