--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -63,49 +63,88 @@
     }
 }
 
-.menuBtn {
-    background-color: var(--white);
+.menuCard {
     display: flex;
-    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: space-between;
     width: u.rem(349);
     height: u.rem(69);
-    isolation: isolate;
     position: relative;
-    @include u.shadow(u.rem(4), u.rem(15), 0.15, u.rem(20));
-    transition: all 500ms ease-in-out;
+    overflow: hidden;
+    @include u.shadow(u.rem(4), u.rem(15), 0.1, u.rem(15));
+    transition: box-shadow 0.3s;
     &:hover {
-        transform: translateY(-0.2rem);
-        box-shadow: u.rem(2) u.rem(3) u.rem(15) var(--btn-purple-dark);
+        @include u.shadow(u.rem(0), u.rem(30), 0.3, u.rem(15));
     }
     &__box {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
+        padding: 15px;
+        align-items: flex-end;
         gap: u.rem(5);
-        &--title {
-            font-family: u.$font-roboto;
-            line-height: u.rem(21.09);
-            margin-left: u.rem(15);
-        }
         &--text {
-            line-height: u.rem(18.75);
-            margin-left: u.rem(15);
-            margin-right: u.rem(38);
-            font-weight: 300;
-            & span {
-                width: 18px;
-                height: 18px;
-                font-weight: 700;
-                font-size: 15.0431px;
-                line-height: 18px;
-                display: flex;
-                align-items: flex-end;
-                text-align: center;
-                color: #353535;
+            display: flex;
+            flex-direction: column; 
+            justify-content: center;
+            align-items: flex-start;
+            height: 42px;
+            gap: 5px;
+            & h4 {
+                font-family: u.$font-roboto;
+                line-height: u.rem(21.09);
             }
+            & p {
+                line-height: u.rem(17.63);
+                font-weight: 300;
+                font-size: 15px;
+            }
+        }
+        &--price {
+            display: flex;
+            align-items: flex-start;
+            font-size: 15px;
+            position: absolute;
+            right: 16px;
+            transition: margin-right 450ms ease-in-out;
+        }
+    }
+    &__selectBtn {
+        background-color: #99E2D0;
+        border-radius: 0 16px 16px 0;
+        position: absolute;
+        width: 59px;
+        height: 69px;
+        right: -60px;
+        top: 0px;
+        transition: margin-right 450ms ease-in-out;
+        &--check {
+            position: absolute;
+            top: 25px;
+            right: 20px;
+            transform: rotate(0);
+            transition: transform 1s ease-in-out;
+        }   
+    }
+    &:hover .menuCard__box--price {
+        margin-right: 60px;
+    }
+
+    &:hover .menuCard__selectBtn {
+        margin-right: 60px;
+        &--check {
+            animation: check-rotate 0.3s linear 0.1s;
         }
     }
 }
+
+.even {
+    animation: showCardEven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.uneven {
+    animation: showCardUneven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+
+
