--- a/scss/pages/_menu-pages.scss
+++ b/scss/pages/_menu-pages.scss
@@ -50,7 +50,7 @@ html {
         &--title {
             height: 27px;
             text-transform: uppercase;
-            font-size: 300;
+            font-weight: 300;
             line-height: u.rem(18.75);
             width: 275px;
         }
