--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -10,6 +10,10 @@ a, a:visited, a:active  {
     color: var(--white);
 }
 
+.card a {
+    color: var(--black);
+}
+
 ul, li {
     list-style: none;
 }
