--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -2,8 +2,6 @@
 
 /*----- Cards -----*/
 .card {
-    background-color: var(--background-color);
-    color: var(--black)!important;
     position: relative;
     overflow: hidden;
     width: 100%;
@@ -40,15 +38,15 @@
     &__subtitle {
         margin: 0 u.rem(80) u.rem(12) u.rem(13);
     }
-    &__icon {
+/*     &__icon {
         cursor: pointer;
         overflow: visible;
         width: 22px;
         position: absolute;
         bottom: u.rem(33);
         right: u.rem(25);
-        }
-/*     &__icon {
+        } */
+    &__icon {
         position: absolute;
         bottom: u.rem(33);
         right: u.rem(25);
@@ -56,7 +54,92 @@
         height: 21px;
         width: 22px;
         &:hover {
+            animation: animationHeart .5s linear forwards .25s;
             background: url("../images/icon/heart-like.svg");
+            background-size: 22px 21px;
         }
-    } */
+    }
 } 
+
+.menuCard {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: u.rem(69);
+    position: relative;
+    overflow: hidden;
+    @include u.shadow(u.rem(4), u.rem(15), 0.1, u.rem(15));
+    transition: box-shadow 0.3s;
+    &:hover {
+        @include u.shadow(u.rem(0), u.rem(30), 0.3, u.rem(15));
+    }
+    &__box {
+        display: flex;
+        padding: 15px;
+        align-items: flex-end;
+        gap: u.rem(5);
+        &--text {
+            display: flex;
+            flex-direction: column; 
+            justify-content: center;
+            align-items: flex-start;
+            height: 42px;
+            gap: 5px;
+            & h4 {
+                font-family: u.$font-roboto;
+                line-height: u.rem(21.09);
+            }
+            & p {
+                line-height: u.rem(17.63);
+                font-weight: 300;
+                font-size: 15px;
+            }
+        }
+        &--price {
+            display: flex;
+            align-items: flex-start;
+            font-size: 15px;
+            position: absolute;
+            right: 16px;
+            transition: margin-right 450ms ease-in-out;
+        }
+    }
+    &__selectBtn {
+        background-color: #99E2D0;
+        border-radius: 0 16px 16px 0;
+        position: absolute;
+        width: 59px;
+        height: 69px;
+        right: -60px;
+        top: 0px;
+        transition: margin-right 450ms ease-in-out;
+        &--check {
+            position: absolute;
+            top: 25px;
+            right: 20px;
+            transform: rotate(0);
+            transition: transform 1s ease-in-out;
+        }   
+    }
+    &:hover .menuCard__box--price {
+        margin-right: 60px;
+    }
+
+    &:hover .menuCard__selectBtn {
+        margin-right: 60px;
+        &--check {
+            animation: check-rotate 0.3s linear 0.1s;
+        }
+    }
+}
+
+.even {
+    animation: showCardEven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
+
+.uneven {
+    animation: showCardUneven 1s cubic-bezier(0, 0.02, 0.28, 1.49);
+
+}
