--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -12,4 +12,6 @@
     --btn-icone-grey: #7E7E7E;
     --btn-green-light: #99E2D0;
     --btn-green-dark: #008766;
+    
+    background-color: var(--white);
 }
