--- a/scss/util/_keyframes.scss
+++ b/scss/util/_keyframes.scss
@@ -63,21 +63,21 @@
 @keyframes showCardEven {
   0% {
     opacity: 0;
-    transform: translateX(-300px);
+    transform: translateX(u.rem(-300));
   }
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
 
 @keyframes showCardUneven {
   0% {
     opacity: 0;
-    transform: translateX(300px);
+    transform: translateX(u.rem(300));
   }
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
