--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,7 @@ table {
   --btn-icone-grey: #7E7E7E;
   --btn-green-light: #99E2D0;
   --btn-green-dark: #008766;
+  background-color: var(--white);
 }
 
 /* breakpoints small:375px, medium:700px, large:900px, xlarge:1440px */ /*----- Le Loader -----*/
@@ -118,21 +119,21 @@ table {
 @keyframes showCardEven {
   0% {
     opacity: 0;
-    transform: translateX(-300px);
+    transform: translateX(-18.75rem);
   }
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
 @keyframes showCardUneven {
   0% {
     opacity: 0;
-    transform: translateX(300px);
+    transform: translateX(18.75rem);
   }
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateX(0);
   }
 }
 /*----- Typographie -----*/
@@ -181,7 +182,7 @@ a, a:visited, a:active {
   color: var(--white);
 }
 
-.card a {
+.card h3, p {
   color: var(--black);
 }
 
@@ -205,7 +206,7 @@ body {
 }
 
 .l-header .grid {
-  max-width: 1440px;
+  max-width: 90rem;
 }
 
 .footer .grid {
@@ -248,7 +249,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 14px;
+  padding-top: 0.875rem;
 }
 @media (min-width: 48em) {
   .nav {
@@ -424,8 +425,8 @@ body {
 
 .loader__text, .loader__palette {
   font-size: 2.5rem;
-  line-height: 64px;
-  letter-spacing: 10px;
+  line-height: 4rem;
+  letter-spacing: 0.625rem;
   display: flex;
   justify-content: space-between;
 }
@@ -442,7 +443,7 @@ body {
   position: relative;
   display: inline-block;
   opacity: 0;
-  text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.9);
+  text-shadow: 0 0.625rem 0.9375rem rgb(0, 0, 0);
 }
 
 .loader__text span:nth-child(1) {
@@ -614,7 +615,7 @@ body {
   /*     &__icon {
           cursor: pointer;
           overflow: visible;
-          width: 22px;
+          width: u.rem(22);
           position: absolute;
           bottom: u.rem(33);
           right: u.rem(25);
@@ -655,13 +656,13 @@ body {
   bottom: 2.0625rem;
   right: 1.5625rem;
   background: url("../images/icon/heart.svg");
-  height: 21px;
-  width: 22px;
+  height: 1.3125rem;
+  width: 1.375rem;
 }
 .card__icon:hover {
   animation: animationHeart 0.5s linear forwards 0.25s;
   background: url("../images/icon/heart-like.svg");
-  background-size: 22px 21px;
+  background-size: 1.375rem 1.3125rem;
 }
 
 .menuCard {
@@ -682,7 +683,7 @@ body {
 }
 .menuCard__box {
   display: flex;
-  padding: 15px;
+  padding: 0.9375rem;
   align-items: flex-end;
   gap: 0.3125rem;
 }
@@ -691,8 +692,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  height: 42px;
-  gap: 5px;
+  height: 2.625rem;
+  gap: 0.3125rem;
 }
 .menuCard__box--text h4 {
   font-family: "Roboto", sans-serif;
@@ -701,38 +702,38 @@ body {
 .menuCard__box--text p {
   line-height: 1.101875rem;
   font-weight: 300;
-  font-size: 15px;
+  font-size: 0.9375rem;
 }
 .menuCard__box--price {
   display: flex;
   align-items: flex-start;
-  font-size: 15px;
+  font-size: 0.9375rem;
   position: absolute;
-  right: 16px;
+  right: 1rem;
   transition: margin-right 450ms ease-in-out;
 }
 .menuCard__selectBtn {
   background-color: #99E2D0;
-  border-radius: 0 16px 16px 0;
+  border-radius: 0 1rem 1rem 0;
   position: absolute;
-  width: 59px;
-  height: 69px;
-  right: -60px;
-  top: 0px;
+  width: 3.6875rem;
+  height: 4.3125rem;
+  right: -3.75rem;
+  top: 0;
   transition: margin-right 450ms ease-in-out;
 }
 .menuCard__selectBtn--check {
   position: absolute;
-  top: 25px;
-  right: 20px;
+  top: 1.5625rem;
+  right: 1.25rem;
   transform: rotate(0);
   transition: transform 1s ease-in-out;
 }
 .menuCard:hover .menuCard__box--price {
-  margin-right: 60px;
+  margin-right: 3.75rem;
 }
 .menuCard:hover .menuCard__selectBtn {
-  margin-right: 60px;
+  margin-right: 3.75rem;
 }
 .menuCard:hover .menuCard__selectBtn--check {
   animation: check-rotate 0.3s linear 0.1s;
@@ -764,10 +765,6 @@ svg .heart {
 }
 
 /*----- Les Pages Menu -----*/
-html {
-  background-color: white;
-}
-
 .menuWrapper {
   display: flex;
   flex-direction: column;
@@ -775,8 +772,8 @@ html {
   justify-content: space-between;
   position: absolute;
   width: 100%;
-  height: 1275px;
-  top: 315px;
+  height: 79.6875rem;
+  top: 19.6875rem;
   z-index: 10;
 }
 @media (min-width: 48em) {
@@ -786,19 +783,18 @@ html {
 }
 .menuWrapper__title {
   position: relative;
-  top: 0;
 }
 .menuWrapper__title--titre {
   font-family: "Shrikhand", cursive;
   font-size: 1.75rem;
   line-height: 2.55125rem;
-  width: 341px;
+  width: 21.3125rem;
   height: 1.6875rem;
 }
 .menuWrapper__title--icon {
   cursor: pointer;
   overflow: visible;
-  width: 22px;
+  width: 1.375rem;
   position: absolute;
   top: 0.5rem;
   right: 1.5rem;
@@ -809,7 +805,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0 13px;
+  padding: 0 0.8125rem;
   gap: 0.75rem;
 }
 @media (min-width: 48em) {
@@ -818,26 +814,26 @@ html {
   }
 }
 .menuWrapper__box--title {
-  height: 27px;
+  height: 1.6875rem;
   text-transform: uppercase;
   font-weight: 300;
   line-height: 1.171875rem;
-  width: 275px;
+  width: 17.1875rem;
 }
 .menuWrapper__box--borderLeft {
-  border-bottom: 3px solid var(--btn-green-light);
-  width: 40px;
-  margin-top: 6px;
+  border-bottom: 0.1875rem solid var(--btn-green-light);
+  width: 2.5rem;
+  margin-top: 0.375rem;
 }
 
 .background {
   background-color: var(--background-color);
-  border-radius: 25px 25px 0 0;
+  border-radius: 1.5625rem 1.5625rem 0 0;
   position: absolute;
   width: 100%;
-  max-width: 1024px;
-  height: 1300px;
-  top: 283px;
+  max-width: 64rem;
+  height: 81.25rem;
+  top: 17.6875rem;
   z-index: 8;
 }
 @media (min-width: 48em) {
@@ -847,34 +843,71 @@ html {
 }
 @media (min-width: 64em) {
   .background {
-    top: 440px;
-    left: calc(50% - 512px);
+    top: 27.5rem;
+    left: calc(50% - 64rem / 2);
     height: 76.5625rem;
   }
 }
 
 .image {
   background-color: var(--white);
-  background: center/100% url("../images/restaurants/palette.jpg");
-  background-repeat: no-repeat;
+  background: url("../images/restaurants/palette.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
-  height: 275px;
-  top: 63px;
+  height: 17.1875rem;
+  top: 3.9375rem;
   z-index: 0;
 }
 @media (min-width: 48em) {
   .image {
-    height: 383px;
-    top: 96px;
+    height: 23.9375rem;
+    top: 6rem;
   }
 }
 @media (min-width: 64em) {
   .image {
     height: 26.25rem;
-    top: 40px;
+    top: 2.5rem;
   }
+}
+
+.image1 {
+  background: url("../images/restaurants/note.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 17.1875rem;
+  top: 3.9375rem;
+  z-index: 0;
+}
+
+.image2 {
+  background: url("../images/restaurants/francaise.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 17.1875rem;
+  top: 3.9375rem;
+  z-index: 0;
+}
+
+.image3 {
+  background: url("../images/restaurants/delice.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 17.1875rem;
+  top: 3.9375rem;
+  z-index: 0;
 }
 
 .footer {
