--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -21,8 +21,8 @@
 
 .loader__text, .loader__palette {
   font-size: u.rem(40);
-  line-height: 64px;
-  letter-spacing: 10px;
+  line-height: u.rem(64);
+  letter-spacing: u.rem(10);
   display: flex;
   justify-content: space-between;
   @include u.breakpoint(medium) {
@@ -36,7 +36,7 @@
     position: relative;
     display: inline-block;
     opacity: 0;
-    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.9); 
+    text-shadow: 0 u.rem(10) u.rem(15) rgba(0, 0, 0, 1); 
   }
 }
 
