--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -22,7 +22,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 14px;
+    padding-top: u.rem(14);
     @include u.breakpoint(medium) {
         padding-top: u.rem(30);
     }
